src/parser.output
Nonterminals useless in grammar

    assignment_operator
    unary_operator
    cast_expression
    init_declarator_list


Terminals unused in grammar

    STRING_LITERAL
    ELLIPSIS
    NUMBER


Rules useless in grammar

  197 assignment_operator: '='
  198                    | MUL_ASSIGN
  199                    | DIV_ASSIGN
  200                    | MOD_ASSIGN
  201                    | ADD_ASSIGN
  202                    | SUB_ASSIGN
  203                    | LEFT_ASSIGN
  204                    | RIGHT_ASSIGN
  205                    | AND_ASSIGN
  206                    | XOR_ASSIGN
  207                    | OR_ASSIGN


State 323 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | '(' expression ')'

    4 postfix_expression: primary_expression
    5                   | postfix_expression '[' expression ']'
    6                   | postfix_expression '(' ')'
    7                   | postfix_expression '(' argument_expression_list ')'
    8                   | postfix_expression '.' IDENTIFIER
    9                   | postfix_expression PTR_OP IDENTIFIER
   10                   | postfix_expression INC_OP
   11                   | postfix_expression DEC_OP

   12 argument_expression_list: assignment_expression
   13                         | argument_expression_list ',' assignment_expression

   14 unary_expression: postfix_expression
   15                 | INC_OP unary_expression
   16                 | DEC_OP unary_expression
   17                 | SIZEOF unary_expression
   18                 | SIZEOF '(' type_name ')'
   19                 | '-' unary_expression
   20                 | '~' unary_expression
   21                 | '!' unary_expression
   22                 | '+' unary_expression

   23 multiplicative_expression: unary_expression
   24                          | multiplicative_expression '*' unary_expression
   25                          | multiplicative_expression '/' unary_expression
   26                          | multiplicative_expression '%' unary_expression

   27 additive_expression: multiplicative_expression
   28                    | additive_expression '+' multiplicative_expression
   29                    | additive_expression '-' multiplicative_expression

   30 shift_expression: additive_expression
   31                 | shift_expression LEFT_OP additive_expression
   32                 | shift_expression RIGHT_OP additive_expression

   33 relational_expression: shift_expression
   34                      | relational_expression '<' shift_expression
   35                      | relational_expression '>' shift_expression
   36                      | relational_expression LE_OP shift_expression
   37                      | relational_expression GE_OP shift_expression

   38 equality_expression: relational_expression
   39                    | equality_expression EQ_OP relational_expression
   40                    | equality_expression NE_OP relational_expression

   41 and_expression: equality_expression
   42               | and_expression '&' equality_expression

   43 exclusive_or_expression: and_expression
   44                        | exclusive_or_expression '^' and_expression

   45 inclusive_or_expression: exclusive_or_expression
   46                        | inclusive_or_expression '|' exclusive_or_expression

   47 logical_and_expression: inclusive_or_expression
   48                       | logical_and_expression AND_OP inclusive_or_expression

   49 logical_or_expression: logical_and_expression
   50                      | logical_or_expression OR_OP logical_and_expression

   51 conditional_expression: logical_or_expression
   52                       | logical_or_expression '?' expression ':' conditional_expression

   53 assignment_expression: conditional_expression
   54                      | unary_expression '=' assignment_expression
   55                      | unary_expression MUL_ASSIGN assignment_expression
   56                      | unary_expression DIV_ASSIGN assignment_expression
   57                      | unary_expression MOD_ASSIGN assignment_expression
   58                      | unary_expression ADD_ASSIGN assignment_expression
   59                      | unary_expression SUB_ASSIGN assignment_expression
   60                      | unary_expression LEFT_ASSIGN assignment_expression
   61                      | unary_expression RIGHT_ASSIGN assignment_expression
   62                      | unary_expression AND_ASSIGN assignment_expression
   63                      | unary_expression XOR_ASSIGN assignment_expression
   64                      | unary_expression OR_ASSIGN assignment_expression

   65 expression: assignment_expression

   66 constant_expression: conditional_expression

   67 declaration: declaration_specifiers ';'
   68            | declaration_specifiers init_declarator ';'

   69 declaration_specifiers: storage_class_specifier
   70                       | storage_class_specifier declaration_specifiers
   71                       | type_specifier
   72                       | type_specifier declaration_specifiers
   73                       | type_qualifier
   74                       | type_qualifier declaration_specifiers

   75 init_declarator: declarator
   76                | declarator '=' initializer

   77 storage_class_specifier: TYPEDEF
   78                        | EXTERN
   79                        | STATIC
   80                        | AUTO
   81                        | REGISTER

   82 type_specifier: VOID
   83               | CHAR
   84               | SHORT
   85               | INT
   86               | LONG
   87               | FLOAT
   88               | DOUBLE
   89               | SIGNED
   90               | UNSIGNED
   91               | struct_or_union_specifier
   92               | enum_specifier
   93               | TYPE_NAME

   94 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
   95                          | struct_or_union '{' struct_declaration_list '}'
   96                          | struct_or_union IDENTIFIER

   97 struct_or_union: STRUCT
   98                | UNION

   99 struct_declaration_list: struct_declaration
  100                        | struct_declaration_list struct_declaration

  101 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  102 specifier_qualifier_list: type_specifier specifier_qualifier_list
  103                         | type_specifier
  104                         | type_qualifier specifier_qualifier_list
  105                         | type_qualifier

  106 struct_declarator_list: struct_declarator

  107 struct_declarator: declarator
  108                  | ':' constant_expression
  109                  | declarator ':' constant_expression

  110 enum_specifier: ENUM '{' enumerator_list '}'
  111               | ENUM IDENTIFIER '{' enumerator_list '}'
  112               | ENUM IDENTIFIER

  113 enumerator_list: enumerator
  114                | enumerator_list ',' enumerator

  115 enumerator: IDENTIFIER
  116           | IDENTIFIER '=' constant_expression

  117 type_qualifier: CONST
  118               | VOLATILE

  119 declarator: pointer direct_declarator
  120           | direct_declarator

  121 direct_declarator: IDENTIFIER
  122                  | '(' declarator ')'
  123                  | direct_declarator '[' constant_expression ']'
  124                  | direct_declarator '[' ']'
  125                  | direct_declarator '(' parameter_list ')'
  126                  | direct_declarator '(' identifier_list ')'
  127                  | direct_declarator '(' ')'

  128 pointer: '*'
  129        | '*' type_qualifier_list
  130        | '*' pointer
  131        | '*' type_qualifier_list pointer

  132 type_qualifier_list: type_qualifier
  133                    | type_qualifier_list type_qualifier

  134 parameter_list: parameter_declaration
  135               | parameter_list ',' parameter_declaration

  136 parameter_declaration: declaration_specifiers declarator
  137                      | declaration_specifiers abstract_declarator
  138                      | declaration_specifiers

  139 identifier_list: IDENTIFIER

  140 type_name: specifier_qualifier_list
  141          | specifier_qualifier_list abstract_declarator

  142 abstract_declarator: pointer
  143                    | direct_abstract_declarator
  144                    | pointer direct_abstract_declarator

  145 direct_abstract_declarator: '(' abstract_declarator ')'
  146                           | '[' ']'
  147                           | '[' constant_expression ']'
  148                           | direct_abstract_declarator '[' ']'
  149                           | direct_abstract_declarator '[' constant_expression ']'
  150                           | '(' ')'
  151                           | '(' parameter_list ')'
  152                           | direct_abstract_declarator '(' ')'
  153                           | direct_abstract_declarator '(' parameter_list ')'

  154 initializer: assignment_expression
  155            | '{' initializer_list '}'

  156 initializer_list: initializer

  157 statement: labeled_statement
  158          | compound_statement
  159          | expression_statement
  160          | selection_statement
  161          | iteration_statement
  162          | jump_statement

  163 labeled_statement: IDENTIFIER ':' statement
  164                  | CASE constant_expression ':' statement
  165                  | DEFAULT ':' statement

  166 compound_statement: '{' '}'
  167                   | '{' statement_list '}'
  168                   | '{' declaration_list '}'
  169                   | '{' declaration_list statement_list '}'

  170 declaration_list: declaration
  171                 | declaration_list declaration

  172 statement_list: statement
  173               | statement_list statement

  174 expression_statement: ';'
  175                     | expression ';'

  176 selection_statement: IF '(' expression ')' statement
  177                    | IF '(' expression ')' statement ELSE statement
  178                    | SWITCH '(' expression ')' statement

  179 iteration_statement: WHILE '(' expression ')' statement
  180                    | DO statement WHILE '(' expression ')' ';'
  181                    | FOR '(' expression_statement expression_statement ')' statement
  182                    | FOR '(' expression_statement expression_statement expression ')' statement

  183 jump_statement: GOTO IDENTIFIER ';'
  184               | CONTINUE ';'
  185               | BREAK ';'
  186               | RETURN ';'
  187               | RETURN expression ';'

  188 translation_unit: external_declaration
  189                 | translation_unit external_declaration

  190 external_declaration: function_definition
  191                     | declaration

  192 function_definition: declaration_specifiers declarator declaration_list compound_statement
  193                    | declaration_specifiers declarator compound_statement
  194                    | declarator declaration_list compound_statement
  195                    | declarator compound_statement

  196 program: translation_unit


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 21
    '%' (37) 26
    '&' (38) 42
    '(' (40) 3 6 7 18 122 125 126 127 145 150 151 152 153 176 177 178 179 180 181 182
    ')' (41) 3 6 7 18 122 125 126 127 145 150 151 152 153 176 177 178 179 180 181 182
    '*' (42) 24 128 129 130 131
    '+' (43) 22 28
    ',' (44) 13 114 135
    '-' (45) 19 29
    '.' (46) 8
    '/' (47) 25
    ':' (58) 52 108 109 163 164 165
    ';' (59) 67 68 101 174 175 180 183 184 185 186 187
    '<' (60) 34
    '=' (61) 54 76 116
    '>' (62) 35
    '?' (63) 52
    '[' (91) 5 123 124 146 147 148 149
    ']' (93) 5 123 124 146 147 148 149
    '^' (94) 44
    '{' (123) 94 95 110 111 155 166 167 168 169
    '|' (124) 46
    '}' (125) 94 95 110 111 155 166 167 168 169
    '~' (126) 20
    error (256)
    IDENTIFIER <string> (258) 1 8 9 94 96 111 112 115 116 121 139 163 183
    CONSTANT <string> (259) 2
    STRING_LITERAL (260)
    SIZEOF (261) 17 18
    PTR_OP (262) 9
    INC_OP (263) 10 15
    DEC_OP (264) 11 16
    LEFT_OP (265) 31
    RIGHT_OP (266) 32
    LE_OP (267) 36
    GE_OP (268) 37
    EQ_OP (269) 39
    NE_OP (270) 40
    AND_OP (271) 48
    OR_OP (272) 50
    MUL_ASSIGN (273) 55
    DIV_ASSIGN (274) 56
    MOD_ASSIGN (275) 57
    ADD_ASSIGN (276) 58
    SUB_ASSIGN (277) 59
    LEFT_ASSIGN (278) 60
    RIGHT_ASSIGN (279) 61
    AND_ASSIGN (280) 62
    XOR_ASSIGN (281) 63
    OR_ASSIGN (282) 64
    TYPE_NAME (283) 93
    TYPEDEF (284) 77
    EXTERN (285) 78
    STATIC (286) 79
    AUTO (287) 80
    REGISTER (288) 81
    CHAR (289) 83
    SHORT (290) 84
    INT <number> (291) 85
    LONG (292) 86
    SIGNED (293) 89
    UNSIGNED (294) 90
    FLOAT (295) 87
    DOUBLE (296) 88
    CONST (297) 117
    VOLATILE (298) 118
    VOID (299) 82
    STRUCT (300) 97
    UNION (301) 98
    ENUM (302) 110 111 112
    ELLIPSIS (303)
    NUMBER (304)
    CASE (305) 164
    DEFAULT (306) 165
    IF (307) 176 177
    ELSE (308) 177
    SWITCH (309) 178
    WHILE (310) 179 180
    DO (311) 180
    FOR (312) 181 182
    GOTO (313) 183
    CONTINUE (314) 184
    BREAK (315) 185
    RETURN (316) 186 187


Nonterminals, with rules where they appear

    $accept (86)
        on left: 0
    primary_expression <expr> (87)
        on left: 1 2 3
        on right: 4
    postfix_expression <expr> (88)
        on left: 4 5 6 7 8 9 10 11
        on right: 5 6 7 8 9 10 11 14
    argument_expression_list <list> (89)
        on left: 12 13
        on right: 7 13
    unary_expression <expr> (90)
        on left: 14 15 16 17 18 19 20 21 22
        on right: 15 16 17 19 20 21 22 23 24 25 26 54 55 56 57 58 59 60 61 62 63 64
    multiplicative_expression <expr> (91)
        on left: 23 24 25 26
        on right: 24 25 26 27 28 29
    additive_expression <expr> (92)
        on left: 27 28 29
        on right: 28 29 30 31 32
    shift_expression <expr> (93)
        on left: 30 31 32
        on right: 31 32 33 34 35 36 37
    relational_expression <expr> (94)
        on left: 33 34 35 36 37
        on right: 34 35 36 37 38 39 40
    equality_expression <expr> (95)
        on left: 38 39 40
        on right: 39 40 41 42
    and_expression <expr> (96)
        on left: 41 42
        on right: 42 43 44
    exclusive_or_expression <expr> (97)
        on left: 43 44
        on right: 44 45 46
    inclusive_or_expression <expr> (98)
        on left: 45 46
        on right: 46 47 48
    logical_and_expression <expr> (99)
        on left: 47 48
        on right: 48 49 50
    logical_or_expression <expr> (100)
        on left: 49 50
        on right: 50 51 52
    conditional_expression <expr> (101)
        on left: 51 52
        on right: 52 53 66
    assignment_expression <expr> (102)
        on left: 53 54 55 56 57 58 59 60 61 62 63 64
        on right: 12 13 54 55 56 57 58 59 60 61 62 63 64 65 154
    expression <expr> (103)
        on left: 65
        on right: 3 5 52 175 176 177 178 179 180 182 187
    constant_expression <expr> (104)
        on left: 66
        on right: 108 109 116 123 147 149 164
    declaration <expr> (105)
        on left: 67 68
        on right: 170 171 191
    declaration_specifiers <expr> (106)
        on left: 69 70 71 72 73 74
        on right: 67 68 70 72 74 136 137 138 192 193
    init_declarator <expr> (107)
        on left: 75 76
        on right: 68
    storage_class_specifier <expr> (108)
        on left: 77 78 79 80 81
        on right: 69 70
    type_specifier <expr> (109)
        on left: 82 83 84 85 86 87 88 89 90 91 92 93
        on right: 71 72 102 103
    struct_or_union_specifier <expr> (110)
        on left: 94 95 96
        on right: 91
    struct_or_union <expr> (111)
        on left: 97 98
        on right: 94 95 96
    struct_declaration_list <list> (112)
        on left: 99 100
        on right: 94 95 100
    struct_declaration <expr> (113)
        on left: 101
        on right: 99 100
    specifier_qualifier_list (114)
        on left: 102 103 104 105
        on right: 101 102 104 140 141
    struct_declarator_list (115)
        on left: 106
        on right: 101
    struct_declarator (116)
        on left: 107 108 109
        on right: 106
    enum_specifier <expr> (117)
        on left: 110 111 112
        on right: 92
    enumerator_list <list> (118)
        on left: 113 114
        on right: 110 111 114
    enumerator <expr> (119)
        on left: 115 116
        on right: 113 114
    type_qualifier <expr> (120)
        on left: 117 118
        on right: 73 74 104 105 132 133
    declarator <expr> (121)
        on left: 119 120
        on right: 75 76 107 109 122 136 192 193 194 195
    direct_declarator <expr> (122)
        on left: 121 122 123 124 125 126 127
        on right: 119 120 123 124 125 126 127
    pointer <expr> (123)
        on left: 128 129 130 131
        on right: 119 130 131 142 144
    type_qualifier_list <list> (124)
        on left: 132 133
        on right: 129 131 133
    parameter_list <list> (125)
        on left: 134 135
        on right: 125 135 151 153
    parameter_declaration <expr> (126)
        on left: 136 137 138
        on right: 134 135
    identifier_list <list> (127)
        on left: 139
        on right: 126
    type_name <expr> (128)
        on left: 140 141
        on right: 18
    abstract_declarator <expr> (129)
        on left: 142 143 144
        on right: 137 141 145
    direct_abstract_declarator <expr> (130)
        on left: 145 146 147 148 149 150 151 152 153
        on right: 143 144 148 149 152 153
    initializer <expr> (131)
        on left: 154 155
        on right: 76 156
    initializer_list <expr> (132)
        on left: 156
        on right: 155
    statement <expr> (133)
        on left: 157 158 159 160 161 162
        on right: 163 164 165 172 173 176 177 178 179 180 181 182
    labeled_statement <expr> (134)
        on left: 163 164 165
        on right: 157
    compound_statement <expr> (135)
        on left: 166 167 168 169
        on right: 158 192 193 194 195
    declaration_list <list> (136)
        on left: 170 171
        on right: 168 169 171 192 194
    statement_list <list> (137)
        on left: 172 173
        on right: 167 169 173
    expression_statement <expr> (138)
        on left: 174 175
        on right: 159 181 182
    selection_statement <expr> (139)
        on left: 176 177 178
        on right: 160
    iteration_statement <expr> (140)
        on left: 179 180 181 182
        on right: 161
    jump_statement <expr> (141)
        on left: 183 184 185 186 187
        on right: 162
    translation_unit <list> (142)
        on left: 188 189
        on right: 189 196
    external_declaration <expr> (143)
        on left: 190 191
        on right: 188 189
    function_definition <expr> (144)
        on left: 192 193 194 195
        on right: 190
    program <expr> (145)
        on left: 196
        on right: 0


State 0

    0 $accept: . program $end

    IDENTIFIER  shift, and go to state 1
    TYPE_NAME   shift, and go to state 2
    TYPEDEF     shift, and go to state 3
    EXTERN      shift, and go to state 4
    STATIC      shift, and go to state 5
    AUTO        shift, and go to state 6
    REGISTER    shift, and go to state 7
    CHAR        shift, and go to state 8
    SHORT       shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    FLOAT       shift, and go to state 14
    DOUBLE      shift, and go to state 15
    CONST       shift, and go to state 16
    VOLATILE    shift, and go to state 17
    VOID        shift, and go to state 18
    STRUCT      shift, and go to state 19
    UNION       shift, and go to state 20
    ENUM        shift, and go to state 21
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    declarator                 go to state 32
    direct_declarator          go to state 33
    pointer                    go to state 34
    translation_unit           go to state 35
    external_declaration       go to state 36
    function_definition        go to state 37
    program                    go to state 38


State 1

  121 direct_declarator: IDENTIFIER .

    $default  reduce using rule 121 (direct_declarator)


State 2

   93 type_specifier: TYPE_NAME .

    $default  reduce using rule 93 (type_specifier)


State 3

   77 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 77 (storage_class_specifier)


State 4

   78 storage_class_specifier: EXTERN .

    $default  reduce using rule 78 (storage_class_specifier)


State 5

   79 storage_class_specifier: STATIC .

    $default  reduce using rule 79 (storage_class_specifier)


State 6

   80 storage_class_specifier: AUTO .

    $default  reduce using rule 80 (storage_class_specifier)


State 7

   81 storage_class_specifier: REGISTER .

    $default  reduce using rule 81 (storage_class_specifier)


State 8

   83 type_specifier: CHAR .

    $default  reduce using rule 83 (type_specifier)


State 9

   84 type_specifier: SHORT .

    $default  reduce using rule 84 (type_specifier)


State 10

   85 type_specifier: INT .

    $default  reduce using rule 85 (type_specifier)


State 11

   86 type_specifier: LONG .

    $default  reduce using rule 86 (type_specifier)


State 12

   89 type_specifier: SIGNED .

    $default  reduce using rule 89 (type_specifier)


State 13

   90 type_specifier: UNSIGNED .

    $default  reduce using rule 90 (type_specifier)


State 14

   87 type_specifier: FLOAT .

    $default  reduce using rule 87 (type_specifier)


State 15

   88 type_specifier: DOUBLE .

    $default  reduce using rule 88 (type_specifier)


State 16

  117 type_qualifier: CONST .

    $default  reduce using rule 117 (type_qualifier)


State 17

  118 type_qualifier: VOLATILE .

    $default  reduce using rule 118 (type_qualifier)


State 18

   82 type_specifier: VOID .

    $default  reduce using rule 82 (type_specifier)


State 19

   97 struct_or_union: STRUCT .

    $default  reduce using rule 97 (struct_or_union)


State 20

   98 struct_or_union: UNION .

    $default  reduce using rule 98 (struct_or_union)


State 21

  110 enum_specifier: ENUM . '{' enumerator_list '}'
  111               | ENUM . IDENTIFIER '{' enumerator_list '}'
  112               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 39
    '{'         shift, and go to state 40


State 22

  122 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    declarator         go to state 41
    direct_declarator  go to state 33
    pointer            go to state 34


State 23

  128 pointer: '*' .
  129        | '*' . type_qualifier_list
  130        | '*' . pointer
  131        | '*' . type_qualifier_list pointer

    CONST     shift, and go to state 16
    VOLATILE  shift, and go to state 17
    '*'       shift, and go to state 23

    $default  reduce using rule 128 (pointer)

    type_qualifier       go to state 42
    pointer              go to state 43
    type_qualifier_list  go to state 44


State 24

  191 external_declaration: declaration .

    $default  reduce using rule 191 (external_declaration)


State 25

   67 declaration: declaration_specifiers . ';'
   68            | declaration_specifiers . init_declarator ';'
  192 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  193                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 22
    '*'         shift, and go to state 23
    ';'         shift, and go to state 45

    init_declarator    go to state 46
    declarator         go to state 47
    direct_declarator  go to state 33
    pointer            go to state 34


State 26

   69 declaration_specifiers: storage_class_specifier .
   70                       | storage_class_specifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 69 (declaration_specifiers)

    declaration_specifiers     go to state 48
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


State 27

   71 declaration_specifiers: type_specifier .
   72                       | type_specifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 71 (declaration_specifiers)

    declaration_specifiers     go to state 49
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


State 28

   91 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 91 (type_specifier)


State 29

   94 struct_or_union_specifier: struct_or_union . IDENTIFIER '{' struct_declaration_list '}'
   95                          | struct_or_union . '{' struct_declaration_list '}'
   96                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 50
    '{'         shift, and go to state 51


State 30

   92 type_specifier: enum_specifier .

    $default  reduce using rule 92 (type_specifier)


State 31

   73 declaration_specifiers: type_qualifier .
   74                       | type_qualifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 73 (declaration_specifiers)

    declaration_specifiers     go to state 52
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


State 32

  194 function_definition: declarator . declaration_list compound_statement
  195                    | declarator . compound_statement

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21
    '{'        shift, and go to state 53

    declaration                go to state 54
    declaration_specifiers     go to state 55
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    compound_statement         go to state 56
    declaration_list           go to state 57


State 33

  120 declarator: direct_declarator .
  123 direct_declarator: direct_declarator . '[' constant_expression ']'
  124                  | direct_declarator . '[' ']'
  125                  | direct_declarator . '(' parameter_list ')'
  126                  | direct_declarator . '(' identifier_list ')'
  127                  | direct_declarator . '(' ')'

    '('  shift, and go to state 58
    '['  shift, and go to state 59

    $default  reduce using rule 120 (declarator)


State 34

  119 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 22

    direct_declarator  go to state 60


State 35

  189 translation_unit: translation_unit . external_declaration
  196 program: translation_unit .

    IDENTIFIER  shift, and go to state 1
    TYPE_NAME   shift, and go to state 2
    TYPEDEF     shift, and go to state 3
    EXTERN      shift, and go to state 4
    STATIC      shift, and go to state 5
    AUTO        shift, and go to state 6
    REGISTER    shift, and go to state 7
    CHAR        shift, and go to state 8
    SHORT       shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    FLOAT       shift, and go to state 14
    DOUBLE      shift, and go to state 15
    CONST       shift, and go to state 16
    VOLATILE    shift, and go to state 17
    VOID        shift, and go to state 18
    STRUCT      shift, and go to state 19
    UNION       shift, and go to state 20
    ENUM        shift, and go to state 21
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    $default  reduce using rule 196 (program)

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    declarator                 go to state 32
    direct_declarator          go to state 33
    pointer                    go to state 34
    external_declaration       go to state 61
    function_definition        go to state 37


State 36

  188 translation_unit: external_declaration .

    $default  reduce using rule 188 (translation_unit)


State 37

  190 external_declaration: function_definition .

    $default  reduce using rule 190 (external_declaration)


State 38

    0 $accept: program . $end

    $end  shift, and go to state 62


State 39

  111 enum_specifier: ENUM IDENTIFIER . '{' enumerator_list '}'
  112               | ENUM IDENTIFIER .

    '{'  shift, and go to state 63

    $default  reduce using rule 112 (enum_specifier)


State 40

  110 enum_specifier: ENUM '{' . enumerator_list '}'

    IDENTIFIER  shift, and go to state 64

    enumerator_list  go to state 65
    enumerator       go to state 66


State 41

  122 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 67


State 42

  132 type_qualifier_list: type_qualifier .

    $default  reduce using rule 132 (type_qualifier_list)


State 43

  130 pointer: '*' pointer .

    $default  reduce using rule 130 (pointer)


State 44

  129 pointer: '*' type_qualifier_list .
  131        | '*' type_qualifier_list . pointer
  133 type_qualifier_list: type_qualifier_list . type_qualifier

    CONST     shift, and go to state 16
    VOLATILE  shift, and go to state 17
    '*'       shift, and go to state 23

    $default  reduce using rule 129 (pointer)

    type_qualifier  go to state 68
    pointer         go to state 69


State 45

   67 declaration: declaration_specifiers ';' .

    $default  reduce using rule 67 (declaration)


State 46

   68 declaration: declaration_specifiers init_declarator . ';'

    ';'  shift, and go to state 70


State 47

   75 init_declarator: declarator .
   76                | declarator . '=' initializer
  192 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  193                    | declaration_specifiers declarator . compound_statement

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21
    '='        shift, and go to state 71
    '{'        shift, and go to state 53

    $default  reduce using rule 75 (init_declarator)

    declaration                go to state 54
    declaration_specifiers     go to state 55
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    compound_statement         go to state 72
    declaration_list           go to state 73


State 48

   70 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 70 (declaration_specifiers)


State 49

   72 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 72 (declaration_specifiers)


State 50

   94 struct_or_union_specifier: struct_or_union IDENTIFIER . '{' struct_declaration_list '}'
   96                          | struct_or_union IDENTIFIER .

    '{'  shift, and go to state 74

    $default  reduce using rule 96 (struct_or_union_specifier)


State 51

   95 struct_or_union_specifier: struct_or_union '{' . struct_declaration_list '}'

    TYPE_NAME  shift, and go to state 2
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21

    type_specifier             go to state 75
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    struct_declaration_list    go to state 76
    struct_declaration         go to state 77
    specifier_qualifier_list   go to state 78
    enum_specifier             go to state 30
    type_qualifier             go to state 79


State 52

   74 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 74 (declaration_specifiers)


State 53

  166 compound_statement: '{' . '}'
  167                   | '{' . statement_list '}'
  168                   | '{' . declaration_list '}'
  169                   | '{' . declaration_list statement_list '}'
